# djai-platform

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  SECURITY.en.md  SECURITY.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  branch-protection-rules.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/schemas/: chat.py
backend/app/services/: chat.py
deploy/: .env.example  docker-compose.yml
docs/: architecture.en.md  architecture.md  mvp.md  roadmap.en.md  roadmap.md
docs/adr/: 0001-initial-stack.md
frontend/: Dockerfile  README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
