[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "djai-platform-backend"
version = "0.1.0"
description = "Minimal FastAPI backend scaffold for DJAI Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "uvicorn>=0.34,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
